--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 };
+html{
+    scroll-behavior: smooth;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
